--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: ""
+baseurl: "/"
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -49,7 +49,7 @@ social:
     - https://www.facebook.com/yousefade1
     - https://www.linkedin.com/in/yusufadell
 
-google_site_verification: n4heTz5TXkVvz7maPpdGLnpAVaN-NQT1Vrc79uIssxM # change to your verification string
+google_site_verification: google-site-verification=n4heTz5TXkVvz7maPpdGLnpAVaN-NQT1Vrc79uIssxM # change to your verification string
 
 # ↑ --------------------------
 
@@ -71,7 +71,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: dark # [light|dark]
+theme_mode:  # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -87,14 +87,14 @@ avatar:
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: utterances # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
+    repo: yusufadell/yusufadell.github.io # <gh-username>/<repo>
+    issue_term: title # < url | pathname | title | ...>
 
 paginate: 6
 
