✏️ fix Typo in twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ github:
   username: yusufadell # change to your github username
 
 twitter:
-  username: _WHYUSUF # change to your twitter username
+  username: WHYUSUF_ # change to your twitter username
 
 social:
   # Change to your full name.
