--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >- # used by seo meta and the atom feed
   which i found interesting to sahre with you.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: "https://yusufadell.github.io/blog"
+url: "https://yusufadell.github.io"
 
 github:
   username: yusufadell # change to your github username
