--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: ""
+baseurl: "imperium"
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -35,7 +35,7 @@ github:
   username: yusufadell # change to your github username
 
 twitter:
-  username: WHYUSUF_ # change to your twitter username
+  username: WHYUSUFi # change to your twitter username
 
 social:
   # Change to your full name.
